--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
+*{
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.counter{
+  
   text-align: center;
+  margin-top: 18%;
+  padding: 10px;
+  background-color: rgb(232, 90, 90);
+  border-radius: 10px;
+  width: 30%;
+  height: 250px;
+  margin-left:33%;
+  
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h1{
+  font-size: 40px;
   color: white;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+.increment{
+  width: 25%;
+  margin: 10px;
+  padding: 15px;
+  background-color: white;
+  border: none;
+}
+.decrement{
+  width: 25%;
+  margin: 10px;
+  padding: 15px;
+  background-color: white;
+  border: none;
+  
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
